// Vitest Snapshot v1

exports[`Navbar > Navbar baseVue demo works fine 1`] = `
<div
  class="t-navbar"
>
  <div
    class="t-navbar__back"
  >
    <span
      class="t-navbar__back--arrow"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <!--v-if-->
    <!---->
    <!---->
  </div>
  <div
    class="t-navbar__text"
  >
    标题
  </div>
  <div
    class="t-navbar__right"
  >
    <!---->
  </div>
</div>
`;

exports[`Navbar > Navbar leftIconVue demo works fine 1`] = `
<div
  class="t-navbar"
>
  <div
    class="t-navbar__back"
  >
    <!--v-if-->
    <!--v-if-->
    <!---->
    
    <svg
      class="t-icon t-icon-chevron-left btn-left"
      style="font-size: 24px;"
    >
      <use
        href="#t-icon-chevron-left"
      />
    </svg>
    <svg
      class="t-icon t-icon-close"
      style="font-size: 24px;"
    >
      <use
        href="#t-icon-close"
      />
    </svg>
    
  </div>
  <div
    class="t-navbar__text"
  >
    标题
  </div>
  <div
    class="t-navbar__right"
  >
    
    <svg
      class="t-icon t-icon-ellipsis"
      style="font-size: 24px;"
    >
      <use
        href="#t-icon-ellipsis"
      />
    </svg>
    
  </div>
</div>
`;

exports[`Navbar > Navbar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-16defdf7=""
>
  <h1
    class="title"
    data-v-16defdf7=""
  >
    NavBar 导航栏
  </h1>
  <p
    class="summary"
    data-v-16defdf7=""
  >
    用于不同页面之间切换或者跳转，位于内容区的上方，系统状态栏的下方。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-16defdf7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础导航栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-navbar"
        data-v-16defdf7=""
      >
        <div
          class="t-navbar__back"
        >
          <span
            class="t-navbar__back--arrow"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <!--v-if-->
          <!---->
          <!---->
        </div>
        <div
          class="t-navbar__text"
        >
          标题
        </div>
        <div
          class="t-navbar__right"
        >
          <!---->
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-16defdf7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        左侧双操作导航栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-navbar"
        data-v-16defdf7=""
      >
        <div
          class="t-navbar__back"
        >
          <!--v-if-->
          <!--v-if-->
          <!---->
          
          <svg
            class="t-icon t-icon-chevron-left btn-left"
            style="font-size: 24px;"
          >
            <use
              href="#t-icon-chevron-left"
            />
          </svg>
          <svg
            class="t-icon t-icon-close"
            style="font-size: 24px;"
          >
            <use
              href="#t-icon-close"
            />
          </svg>
          
        </div>
        <div
          class="t-navbar__text"
        >
          标题
        </div>
        <div
          class="t-navbar__right"
        >
          
          <svg
            class="t-icon t-icon-ellipsis"
            style="font-size: 24px;"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-16defdf7=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        右侧双操作导航栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-navbar"
        data-v-16defdf7=""
      >
        <div
          class="t-navbar__back"
        >
          <span
            class="t-navbar__back--arrow"
          >
            <svg
              class="t-icon t-icon-chevron-left"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
          <!--v-if-->
          <!---->
          <!---->
        </div>
        <div
          class="t-navbar__text"
        >
          标题
        </div>
        <div
          class="t-navbar__right"
        >
          
          <svg
            class="t-icon t-icon-notification btn-left"
            style="font-size: 24px;"
          >
            <use
              href="#t-icon-notification"
            />
          </svg>
          <svg
            class="t-icon t-icon-ellipsis"
            style="font-size: 24px;"
          >
            <use
              href="#t-icon-ellipsis"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Navbar > Navbar rightIconVue demo works fine 1`] = `
<div
  class="t-navbar"
>
  <div
    class="t-navbar__back"
  >
    <span
      class="t-navbar__back--arrow"
    >
      <svg
        class="t-icon t-icon-chevron-left"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M9.54 3.54l.92.92L6.92 8l3.54 3.54-.92.92L5.08 8l4.46-4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </span>
    <!--v-if-->
    <!---->
    <!---->
  </div>
  <div
    class="t-navbar__text"
  >
    标题
  </div>
  <div
    class="t-navbar__right"
  >
    
    <svg
      class="t-icon t-icon-notification btn-left"
      style="font-size: 24px;"
    >
      <use
        href="#t-icon-notification"
      />
    </svg>
    <svg
      class="t-icon t-icon-ellipsis"
      style="font-size: 24px;"
    >
      <use
        href="#t-icon-ellipsis"
      />
    </svg>
    
  </div>
</div>
`;
